ambassador/tests/009-rate-limit/gold.intermediate.json
{
    "envoy_config": {
        "admin": [
            {
                "_source": "--internal--",
                "admin_port": 8001
            }
        ],
        "clusters": [
            {
                "_referenced_by": [
                    "--internal--"
                ],
                "_service": "127.0.0.1:8877",
                "_source": "--internal--",
                "lb_type": "round_robin",
                "name": "cluster_127_0_0_1_8877",
                "type": "strict_dns",
                "urls": [
                    "tcp://127.0.0.1:8877"
                ]
            },
            {
                "_referenced_by": [
                    "rate-limit-service.yaml.1"
                ],
                "_service": "example-rate-limit:5000",
                "_source": "rate-limit-service.yaml.1",
                "features": "http2",
                "lb_type": "round_robin",
                "name": "cluster_example_rate_limit_5000",
                "type": "strict_dns",
                "urls": [
                    "tcp://example-rate-limit:5000"
                ]
            },
            {
                "_referenced_by": [
                    "mapping-qotm.yaml.1",
                    "mapping-qotm.yaml.2",
                    "mapping-qotm.yaml.3"
                ],
                "_service": "qotm",
                "_source": "mapping-qotm.yaml.1",
                "lb_type": "round_robin",
                "name": "cluster_qotm",
                "type": "strict_dns",
                "urls": [
                    "tcp://qotm:80"
                ]
            }
        ],
        "filters": [
            {
                "_source": "--internal--",
                "config": {},
                "name": "cors"
            },
            {
                "_source": "rate-limit-service.yaml.1",
                "config": {
                    "domain": "ambassador",
                    "request_type": "both",
                    "timeout_ms": 20
                },
                "name": "rate_limit",
                "type": "decoder"
            },
            {
                "_source": "--internal--",
                "config": {},
                "name": "router",
                "type": "decoder"
            }
        ],
        "grpc_services": [
            {
                "_source": "rate-limit-service.yaml.1",
                "cluster_name": "cluster_example_rate_limit_5000",
                "name": "rate_limit_service"
            }
        ],
        "listeners": [
            {
                "_source": "--internal--",
                "require_tls": false,
                "service_port": 80,
                "use_proxy_proto": false
            }
        ],
        "routes": [
            {
                "__saved": [
                    0,
                    26,
                    0,
                    "/ambassador/v0/check_ready",
                    "GET"
                ],
                "_group_id": "0a42187b7b3d283e0079ddab01825e1c71fad9f6",
                "_method": "GET",
                "_precedence": 0,
                "_referenced_by": [
                    "--internal--"
                ],
                "_source": "--internal--",
                "clusters": [
                    {
                        "name": "cluster_127_0_0_1_8877",
                        "weight": 100.0
                    }
                ],
                "prefix": "/ambassador/v0/check_ready",
                "prefix_rewrite": "/ambassador/v0/check_ready"
            },
            {
                "__saved": [
                    0,
                    18,
                    0,
                    "/qotm-rate-custom/",
                    "GET"
                ],
                "_group_id": "16952a83c5c67a60cb756b8597842e904a1a45be",
                "_method": "GET",
                "_precedence": 0,
                "_referenced_by": [
                    "mapping-qotm.yaml.3"
                ],
                "_source": "mapping-qotm.yaml.3",
                "clusters": [
                    {
                        "name": "cluster_qotm",
                        "weight": 100.0
                    }
                ],
                "prefix": "/qotm-rate-custom/",
                "prefix_rewrite": "/",
                "rate_limits": [
                    {
                        "actions": [
                            {
                                "type": "source_cluster"
                            },
                            {
                                "type": "destination_cluster"
                            },
                            {
                                "type": "remote_address"
                            }
                        ]
                    },
                    {
                        "actions": [
                            {
                                "type": "source_cluster"
                            },
                            {
                                "type": "destination_cluster"
                            },
                            {
                                "type": "remote_address"
                            },
                            {
                                "descriptor_value": "custom-label",
                                "type": "generic_key"
                            },
                            {
                                "descriptor_key": ":authority",
                                "header_name": ":authority",
                                "type": "request_headers"
                            }
                        ]
                    }
                ]
            },
            {
                "__saved": [
                    0,
                    26,
                    0,
                    "/ambassador/v0/check_alive",
                    "GET"
                ],
                "_group_id": "6151893fbc2f1f730a1bb946b2eefac391f0d2ec",
                "_method": "GET",
                "_precedence": 0,
                "_referenced_by": [
                    "--internal--"
                ],
                "_source": "--internal--",
                "clusters": [
                    {
                        "name": "cluster_127_0_0_1_8877",
                        "weight": 100.0
                    }
                ],
                "prefix": "/ambassador/v0/check_alive",
                "prefix_rewrite": "/ambassador/v0/check_alive"
            },
            {
                "__saved": [
                    0,
                    11,
                    0,
                    "/qotm-rate/",
                    "GET"
                ],
                "_group_id": "74d4846b41ecbee075631a48c1d81a951055d489",
                "_method": "GET",
                "_precedence": 0,
                "_referenced_by": [
                    "mapping-qotm.yaml.2"
                ],
                "_source": "mapping-qotm.yaml.2",
                "clusters": [
                    {
                        "name": "cluster_qotm",
                        "weight": 100.0
                    }
                ],
                "prefix": "/qotm-rate/",
                "prefix_rewrite": "/",
                "rate_limits": [
                    {
                        "actions": [
                            {
                                "type": "source_cluster"
                            },
                            {
                                "type": "destination_cluster"
                            },
                            {
                                "type": "remote_address"
                            }
                        ]
                    }
                ]
            },
            {
                "__saved": [
                    0,
                    6,
                    0,
                    "/qotm/",
                    "GET"
                ],
                "_group_id": "9fda39523fe03a3c6aac9c21098375764ec0822d",
                "_method": "GET",
                "_precedence": 0,
                "_referenced_by": [
                    "mapping-qotm.yaml.1"
                ],
                "_source": "mapping-qotm.yaml.1",
                "clusters": [
                    {
                        "name": "cluster_qotm",
                        "weight": 100.0
                    }
                ],
                "prefix": "/qotm/",
                "prefix_rewrite": "/"
            },
            {
                "__saved": [
                    0,
                    15,
                    0,
                    "/ambassador/v0/",
                    "GET"
                ],
                "_group_id": "b69eeb747b38f5e5fd3955d044ea7797d67d024f",
                "_method": "GET",
                "_precedence": 0,
                "_referenced_by": [
                    "--internal--"
                ],
                "_source": "--internal--",
                "clusters": [
                    {
                        "name": "cluster_127_0_0_1_8877",
                        "weight": 100.0
                    }
                ],
                "prefix": "/ambassador/v0/",
                "prefix_rewrite": "/ambassador/v0/"
            }
        ]
    },
    "errors": {},
    "source_map": {
        "--internal--": {
            "--internal--": true
        },
        "mapping-qotm.yaml": {
            "mapping-qotm.yaml.1": true,
            "mapping-qotm.yaml.2": true,
            "mapping-qotm.yaml.3": true
        },
        "rate-limit-service.yaml": {
            "rate-limit-service.yaml.1": true
        }
    },
    "sources": {
        "--diagnostics--": {
            "_source": "--diagnostics--",
            "description": "The '--diagnostics--' source marks objects created by Ambassador to assist with diagnostic output.",
            "filename": "--diagnostics--",
            "index": 0,
            "kind": "diagnostics",
            "name": "Ambassador Diagnostics",
            "version": "v0"
        },
        "--internal--": {
            "_source": "--internal--",
            "description": "The '--internal--' source marks objects created by Ambassador's internal logic.",
            "filename": "--internal--",
            "index": 0,
            "kind": "Internal",
            "name": "Ambassador Internals",
            "version": "v0"
        },
        "mapping-qotm.yaml.1": {
            "_source": "mapping-qotm.yaml",
            "filename": "mapping-qotm.yaml",
            "index": 1,
            "kind": "Mapping",
            "name": "qotm_mapping",
            "version": "ambassador/v0",
            "yaml": "apiVersion: ambassador/v0\nkind: Mapping\nname: qotm_mapping\nprefix: /qotm/\nservice: qotm\n"
        },
        "mapping-qotm.yaml.2": {
            "_source": "mapping-qotm.yaml",
            "filename": "mapping-qotm.yaml",
            "index": 2,
            "kind": "Mapping",
            "name": "qotm_rate_limit_mapping",
            "version": "ambassador/v0",
            "yaml": "apiVersion: ambassador/v0\nkind: Mapping\nname: qotm_rate_limit_mapping\nprefix: /qotm-rate/\nrate_limits:\n- {}\nservice: qotm\n"
        },
        "mapping-qotm.yaml.3": {
            "_source": "mapping-qotm.yaml",
            "filename": "mapping-qotm.yaml",
            "index": 3,
            "kind": "Mapping",
            "name": "qotm_rate_limit_config_mapping",
            "version": "ambassador/v0",
            "yaml": "apiVersion: ambassador/v0\nkind: Mapping\nname: qotm_rate_limit_config_mapping\nprefix: /qotm-rate-custom/\nrate_limits:\n- {}\n- descriptor: custom-label\n  headers:\n  - :authority\nservice: qotm\n"
        },
        "rate-limit-service.yaml.1": {
            "_source": "rate-limit-service.yaml",
            "filename": "rate-limit-service.yaml",
            "index": 1,
            "kind": "RateLimitService",
            "name": "ratelimit",
            "version": "ambassador/v0",
            "yaml": "apiVersion: ambassador/v0\nkind: RateLimitService\nname: ratelimit\nservice: example-rate-limit:5000\n"
        }
    }
}
